--- a/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/index.css
+++ b/src/components/CentralContainer/Sidebar/SidebarTabs/SearchTabPanel/index.css
@@ -1,5 +1,6 @@
 .search-tab-container {
-    overflow-y: hidden;
+    /* We apply overflow-x here because JoyUI has a rounding issue when calculating the Textarea width, causing it to overflow its container. */
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -8,4 +9,10 @@
 .query-results {
     overflow-y: auto;
     flex-grow: 1;
+}
+
+.query-input-boxes-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
